fixed spacing

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -381,8 +381,8 @@
     padding: 60px 0;
     display: flex;
     justify-content: space-between;
-    gap: 50px;
-    width: 32%;
+    align-items: center;
+    gap: 30px;
     text-align: center;
     color: #FFFFFF;
     text-decoration: none;
